Changelog

10th August

* Use poolboy to manage eval server