@@ -17,6 +17,8 @@ config :phoenix, WebsocketsTerminal.Router,
 config :phoenix, :logger,
   level: :error
 
+config :logger, compile_time_purge_level: :info
+
 # Import environment specific config. Note, this must remain at the bottom of
 # this file to properly merge your previous config entries.
 import_config "#{Mix.env}.exs"
