@@ -1,8 +1,8 @@
 <!-- <span id="status" class="label label-success pull-left"></span> -->
 
-  <div class="bs-callout bs-callout-info">
+<!--   <div class="bs-callout bs-callout-info">
     <h2>Free for 5 minutes? Try some <a href="http://elixir-lang.org" target="_blank">Elixir</a> now!</h2>
-  </div>
+  </div> -->
 
 <div class="row main">
   <!-- <div class="col-lg-5 intro">
@@ -33,10 +33,11 @@
 <script>
       $(function() {
         var console_channel;
+        var prompt_count = 0;
 
         var setup_console = function(version){
           var header = 'Interactive Elixir (' + version + ')\n';
-          window.jqconsole = $('#console').jqconsole(header, 'iex> ');
+          window.jqconsole = $('#console').jqconsole(header, 'iex(1)> ', '...(1)>');
           // Move to line start Ctrl+A.
           jqconsole.RegisterShortcut('A', function() {
             jqconsole.MoveToStart();
@@ -67,48 +68,35 @@
         var multiLineHandler = function(command) {
           var braces, brackets, last_line_changes, levels, line, parens, token, _i, _j, _len, _len1, _ref, _ref1;
           levels = 0;
-          parens = 0;
-          braces = 0;
-          brackets = 0;
           last_line_changes = 0;
           _ref = command.split('\n');
           for (_i = 0, _len = _ref.length; _i < _len; _i++) {
             line = _ref[_i];
             last_line_changes = 0;
             _ref1 = line.match(TOKENS) || [];
+
+            console.log(_ref1)
+
             for (_j = 0, _len1 = _ref1.length; _j < _len1; _j++) {
               token = _ref1[_j];
               if (__indexOf.call(BLOCK_OPENERS, token) >= 0) {
                 levels++;
                 last_line_changes++;
-              } else if (token === '(') {
-                parens++;
-                last_line_changes++;
-              } else if (token === '{') {
-                braces++;
-                last_line_changes++;
-              } else if (token === '[') {
-                brackets++;
-                last_line_changes++;
               } else if (token === 'end') {
                 levels--;
                 last_line_changes--;
-              } else if (token === ')') {
-                parens--;
-                last_line_changes--;
-              } else if (token === ']') {
-                braces--;
-                last_line_changes--;
-              } else if (token === '}') {
-                brackets--;
-                last_line_changes--;
               }
-              if (levels < 0 || parens < 0 || braces < 0 || brackets < 0) {
+              if (levels < 0) {
                 return false;
               }
             }
           }
-          if (levels > 0 || parens > 0 || braces > 0 || brackets > 0) {
+
+          console.log("LEVELS: " + levels)
+          console.log("LAST LINE CHANGES: " + last_line_changes)
+          //jqconsole.prompt_label_continue = promp_count;
+
+          if (levels > 0) {
             if (last_line_changes > 0) {
               return 1;
             } else if (last_line_changes < 0) {
@@ -126,12 +114,9 @@
 
         var handler = function(command) {
           if(command){
+            console.log(command)
             console_channel.send("shell:stdin", {data: command});
           }
-          // jqconsole.Prompt(true, handler, function(command){
-          //   return false;
-          // });
-
           return jqconsole.Prompt(true, handler, multiLineHandler);
         };
 
@@ -140,7 +125,6 @@
 
         socket.join("shell", "shell", {}, function(chan){
           chan.on("join", function(message){
-            console.log(message)
             console_channel = chan;
             $status.text(message.status);
             setup_console(message.version);
@@ -151,9 +135,12 @@
             var txt = JSON.parse(message);
 
             if(txt){
-              // jqconsole.ClearPromptText(true);
-              // jqconsole.SetPromptLabel(txt.prompt);
-              jqconsole.Write(txt.result + '\n');
+              prompt = $('.jqconsole-cursor').parent().find('span')[0];
+              $(prompt).html(txt.prompt);
+              jqconsole.SetPromptLabel(txt.prompt);
+              jqconsole.prompt_label_continue = txt.prompt.replace("iex", "...");
+
+              jqconsole.Write(txt.result.replace("","") + '\n');
               jqconsole.Write(':' + txt.type + '\n');
             }
           });
